5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1635_1053.log
== TEST (2019-04-04 19:10:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome = cervo):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome = "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome=cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (nome=cervo):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:13:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:14:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome = cervo):
	mensagem = "<entrada>cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:14:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome = cervo)
	mensagem = "<entrada>cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (nome = cervo)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:15:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome = cervo)
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<input>nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (nome = cervo)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:15:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if(nome: cervo)
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<input>nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if(nome: cervo)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:15:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if(nome: cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<input>nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if(nome: cervo):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:16:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if(nome = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<input>nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if(nome = cervo):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:03:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if(nome = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if(nome = cervo):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:04:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:09:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem != "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:09:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem != "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:11:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == cervo):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem != ("nao eh patrono do Harry Potter")
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:12:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == cervo):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem != nome + " nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:12:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem != nome + " nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:12:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem != nome + " nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.145417
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:12:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem != nome + " nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:13:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem != " nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:13:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem = " nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:13:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem = " nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.167446
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:14:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:14:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.175823
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:15:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem = nome + " nao eh patrono do Harry Potter"
	print(mensagem)
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:16:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:16:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome: ")
if (nome == "cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
else:
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.134205
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
